--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
     "autoprefixer": "^10.4.17",
     "cssnano": "^6.0.3",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1"
+    "tailwindcss": "^3.4.1",
+    "postcss-cli": "^9.1.0" 
   },
   "dependencies": {
     "jquery": "^3.7.1"
