--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Set up Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1' # Specify your Ruby version here
+          ruby-version: '3.1'
           bundler-cache: true
 
       - name: Install dependencies
@@ -25,16 +25,15 @@ jobs:
       - name: Install Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: '20' # Node.js version 20
+          node-version: '20'
 
       - name: Install npm dependencies
         run: npm install
 
       - name: Precompile Tailwind CSS using PostCSS
-        run: npx postcss ./assets/css/main.css -o ./assets/css/tailwind.css
+        run: npx postcss ./assets/css/main.css -o ./assets/css/main.css
 
       - name: Build the Jekyll site
-        run: bundle exec jekyll build --trace
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
