--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   },
   "dependencies": {
     "jquery": "^3.7.1"
+  },
+  "scripts": {
+    "serve:dev": "bundle exec jekyll serve --config _config.yml,_config_dev.yml"
   }
 }
