--- a/.github/workflows/sync-gh-pages.yml
+++ b/.github/workflows/sync-gh-pages.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - gh-pages
+  workflow_dispatch: # Allows you to manually trigger the workflow from GitHub's UI
 
 jobs:
   sync:
