--- a/.github/workflows/sync-gh-pages.yml
+++ b/.github/workflows/sync-gh-pages.yml
@@ -18,5 +18,5 @@ jobs:
 
       - name: Push to Shehan-and-susan.github.io
         run: |
-          git remote add temp-fork https://shehan-and-susan:${{ secrets.TEMP_FORK_PAT }}@github.com/Shehan-and-susan/shehan-and-susan.github.io.git
-          git push temp-fork gh-pages:gh-pages --force
+          git remote add shehan-and-susan https://shehan-and-susan:${{ secrets.TEMP_FORK_PAT }}@github.com/Shehan-and-susan/shehan-and-susan.github.io.git
+          git push shehan-and-susan gh-pages:gh-pages --force
