--- a/package.json
+++ b/package.json
@@ -1,15 +1,20 @@
 {
   "devDependencies": {
     "autoprefixer": "^10.4.17",
+    "concurrently": "^7.6.0",
     "cssnano": "^6.0.3",
+    "nodemon": "^3.1.4",
     "postcss": "^8.4.35",
-    "tailwindcss": "^3.4.1",
-    "postcss-cli": "^9.1.0" 
+    "postcss-cli": "^9.1.0",
+    "tailwindcss": "^3.4.1"
   },
   "dependencies": {
     "jquery": "^3.7.1"
   },
-  "scripts": {
-    "serve:dev": "bundle exec jekyll serve --config _config.yml,_config_dev.yml"
-  }
+"scripts": {
+  "watch:tailwind": "postcss ./assets/css/tailwind.css -o ./assets/css/tailwind-output.css --watch",
+  "combine:css": "nodemon --watch ./assets/css/tailwind-output.css --watch ./assets/css/custom.css --exec \"cat ./assets/css/tailwind-output.css ./assets/css/custom.css > ./assets/css/main.css\"",
+  "serve": "concurrently \"bundle exec jekyll serve --config _config.yml --livereload\" \"npm run watch:tailwind\" \"npm run combine:css\""
+}
+
 }
