--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -23,7 +23,7 @@ jobs:
       - name: Install dependencies
         run: bundle install
 
-      - name: Install Node.js
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '20'
@@ -31,8 +31,11 @@ jobs:
       - name: Install npm dependencies
         run: npm install
 
-      - name: Precompile Tailwind CSS using PostCSS
-        run: npx postcss ./assets/css/main.css -o ./assets/css/main.css
+      - name: Compile Tailwind CSS
+        run: npm run watch:tailwind -- --watch=false
+
+      - name: Combine CSS files
+        run: npm run combine:css
 
       - name: Build the Jekyll site
         run: bundle exec jekyll build --trace
