deploy: 39deae7489ac4399747162adc1d5857a127c00cb

--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
     "jquery": "^3.7.1"
   },
 "scripts": {
-  "watch:tailwind": "postcss ./assets/css/tailwind.css -o ./assets/css/tailwind-output.css --watch",
-  "combine:css": "nodemon --watch ./assets/css/tailwind-output.css --watch ./assets/css/custom.css --exec \"cat ./assets/css/tailwind-output.css ./assets/css/custom.css > ./assets/css/main.css\"",
+  "watch:tailwind": "postcss ./assets/css/tailwind.css -o ./assets/css/tailwind.css --watch",
+  "combine:css": "cat ./assets/css/tailwind.css ./assets/css/custom.css > ./assets/css/main.css",
   "serve": "concurrently \"bundle exec jekyll serve --config _config.yml --livereload\" \"npm run watch:tailwind\" \"npm run combine:css\""
 }
 
